# swagger.json
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:5500",
+      "url": "http://localhost:8000",
       "description": "Development server"
     },
     {
@@ -109,6 +109,141 @@
         "responses": {
           "200": { "description": "User authenticated successfully" },
           "401": { "description": "Invalid credentials" }
+        }
+      }
+    },
+   
+    "/api/users/reset-password": {
+      "post": {
+        "summary": "User Reset Password",
+        "description": "Reset User Paassword via Email",
+        "tags": ["Authentication"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string"
+                  }
+                },
+                "required": ["email"]
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Password reset Instructions sent successfully"
+          },
+          "400": {
+            "description": "User not found"
+          }
+        }
+      }
+    },
+    "/api/users/reset-password/{token}": {
+      "patch": {
+        "summary": "User Reset Password",
+        "description": "Reset User Paassword via Email",
+        "tags": ["Authentication"],
+        "parameters": [
+          {
+              "name": "token",
+              "in": "path",
+              "description": "token",
+              "schema": {
+                  "type": "string"
+              }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "newPassword": {
+                    "type": "string"
+                  },
+                  "confirmPassword": {
+                    "type": "string"
+                  }
+                },
+                "required": ["newPassword", "confirmPassword"]
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Password updated succesfully"
+          },
+          "400": {
+            "description": "Passwords don't match"
+          }
+        }
+      }
+    },
+    "/api/users": {
+      "get": {
+        "summary": "Get All Users",
+        "description": "Get a list of all users",
+        "tags": ["Users"],
+        "responses": {
+          "200": {
+            "description": "List of all users"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+
+    "/api/users/profiles": {
+      "put": {
+        "summary": "Edit Profile",
+        "tags": ["User profile page"],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "firstName": {"type": "string"},
+                  "lastName": {"type": "string"},
+                  "phone": {"type": "string"},
+                  "birthDate": {"type": "string", "format": "date"},
+                  "preferredLanguage": {"type": "string"},
+                  "preferredCurrency": {"type": "string"},
+                  "whereYouLive": {"type": "string"},
+                  "billingAddress": {"type": "string"},
+                  "profileImage": {"type": "string", "format": "binary"}
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {"description": "Updated profile page"},
+          "400": {"description": "Fail to update"}
+        },
+        "security": [{"Bearer": []}]
+      }
+    },
+    "/api/users/otp": {
+      "post": {
+        "tags": ["Two factor OTP"],
+        "summary": "Send OTP request",
+        "security": [{"Bearer": []}],
+        "responses": {
+          "201": {"description": "Verification code sent successfully"}
         }
       }
     },
@@ -345,7 +480,7 @@
         }
       }
     },
-    "/api/users/login/google": {
+    "/api/users/google": {
       "get": {
         "summary": "Google Login",
         "description": "Allows users to log in using their Google account. When the user clicks the 'Sign in with Google' button, they will be redirected to this endpoint, which will handle the Google OAuth2 authentication flow.",
@@ -355,29 +490,12 @@
             "description": "Redirect to Google Login",
             "headers": {
               "Location": {
-                "schema": { "type": "string" },
-                "description": "http://localhost:4000/api/users/login/google"
+                "schema": {"type": "string"},
+                "description": "https://champs-ec-be.onrender.com/api/users/google"
               }
             }
           }
         }
-      }
-    },
-    "/api/users": {
-      "get": {
-        "summary": "Get All Users",
-        "description": "Get a list of all users",
-        "tags": ["Users"],
-        "responses": {
-          "200": {
-            "description": "List of all users"
-          }
-        },
-        "security": [
-          {
-            "Bearer": []
-          }
-        ]
       }
     },
     "/api/users/profile": {
@@ -393,37 +511,6 @@
               }
             }
           }
-        },
-        "security": [{ "Bearer": [] }]
-      }
-    },
-    "/api/users/profiles": {
-      "put": {
-        "summary": "Edit Profile",
-        "tags": ["User profile page"],
-        "requestBody": {
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "firstName": { "type": "string" },
-                  "lastName": { "type": "string" },
-                  "phone": { "type": "string" },
-                  "birthDate": { "type": "string", "format": "date" },
-                  "preferredLanguage": { "type": "string" },
-                  "preferredCurrency": { "type": "string" },
-                  "whereYouLive": { "type": "string" },
-                  "billingAddress": { "type": "string" },
-                  "profileImage": { "type": "string", "format": "binary" }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": { "description": "Updated profile page" },
-          "400": { "description": "Fail to update" }
         },
         "security": [{ "Bearer": [] }]
       }
